# cerbursus

./: README.md  pyproject.toml
.github/workflows/: build.yaml  lint.yaml  publish.yaml  test.yaml
cerbursus/: __init__.py  _base.py
tests/: test_basic.py
