[project]
name = "cerbursus"
authors = [
    {name = "Richard Shadrach", email = "rhshadrach@gmail.com"},
]
description = "Convert Polars DataFrames to plaintext tables with hierarchical headers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["polars"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "cerbursus/VERSION"}

[project.urls]
homepage = 'https://github.com/rhshadrach/cerbursus'
documentation = 'https://github.com/rhshadrach/cerbursus'
repository = 'https://github.com/rhshadrach/cerbursus'
issues = 'https://github.com/rhshadrach/cerbursus/issues'

[project.optional-dependencies]
lint = [
    "codespell",
    "mypy",
    "ruff",
]
test = ["pytest"]
dev = ["cerbursus[lint, test]"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "A",   # flake8-builtins
    # "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "D",   # pydocstyle
    "DOC", # pydoclint
    "E",   # pycodestyle - error
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    # "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PL",  # Pylint
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle - warning
    "YTT", # flake8-2020
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
